--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
     <div class="menu-items" id="menuItems">
         <button id="adminBtn" class="off">ADMIN OFF</button>
         <div id="adminTools">
-            <button onclick="tambahBaris('WARGA')" style="background:#28a745; color:#fff;">👤 TAMBAH WARGA</button>
-            <button onclick="tambahBaris('LAIN')" style="background:#17a2b8; color:#fff;">💰 PEMASUKAN LAIN</button>
-            <button onclick="tambahBaris('KELUAR')" style="background:#d9534f; color:#fff;">💸 TAMBAH PENGELUARAN</button>
-            <button id="pullBtn" class="warning" onclick="tarikSaldo()">TARIK SALDO LALU</button>
+            <button onclick="tambahBaris('WARGA')" style="background:#28a745; color:#fff;">TAMBAH WARGA</button>
+            <button onclick="tambahBaris('LAIN')" style="background:#17a2b8; color:#fff;">TAMBAH PEMASUKAN</button>
+            <button onclick="tambahBaris('KELUAR')" style="background:#d9534f; color:#fff;">TAMBAH PENGELUARAN</button>
+            <button id="pullBtn" class="warning" onclick="tarikSaldo()">TEMPEL SISA KAS </button>
             <button id="listVisitorBtn" class="warning" onclick="openPengunjung()">DAFTAR PENGUNJUNG</button>
         </div>
         <button onclick="openChecklist()" class="primary">CHECKLIST KAS</button>
@@ -521,7 +521,7 @@ function updateDeadlineBanner() {
     const banner = document.getElementById('deadline-text');
     if (hariIni <= 3) banner.innerHTML = `<span class="tgl-aman">⚠️ REMINDER: Awal bulan nih bapak-bapak, jangan lupa bayar kas gang yaa ⚠️</span>`; 
     else if (hariIni <= 7) banner.innerHTML = `<span class="tgl-waspada">⚠️ PERHATIAN: Batas iuran kas gang ditunggu sampai tanggal 7 yaa ⚠️</span>`; 
-    else banner.innerHTML = `<span class="tgl-lewat">🛑 Untuk yang belum bayar kas gang diharap untuk segera melakukan pembayaran dan pelunasan jika masih menunggak 🛑</span>`;
+    else banner.innerHTML = `<span class="tgl-lewat">🛑 Untuk yang belum bayar kas gang diharapkan untuk segera melakukan pembayaran dan pelunasan jika masih menunggak 🛑</span>`;
 }
 
 document.getElementById('themeBtn').onclick=()=>{
